--- a/share/config/interface/commands.conf
+++ b/share/config/interface/commands.conf
@@ -35,6 +35,7 @@
 				export = Kephra::File::Session::export_scite();
 				backup-open = Kephra::File::Session::load_backup();
 				backup-save = Kephra::File::Session::save_backup();
+				history-open-all = Kephra::File::History::open_all()
 			</session>
 		</file>
 		<edit>
@@ -338,11 +339,12 @@
 				right-margin = Kephra::App::EditPanel::switch_LLI_visibility()
 				whitespace = Kephra::App::EditPanel::switch_whitespace_visibility()
 				<contextmenu>
-					custom = Kephra::App::ContextMenu::set_editpanel('custom')
-					no = Kephra::App::ContextMenu::set_editpanel('none')
-					default = Kephra::App::ContextMenu::set_editpanel('default')
+					custom = Kephra::App::EditPanel::set_contextmenu('custom')
+					no = Kephra::App::EditPanel::set_contextmenu('none')
+					default = Kephra::App::EditPanel::set_contextmenu('default')
 				</contextmenu>
 				<margin>
+					contexmenu = Kephra::App::EditPanel::Margin::switch_contextmenu_visibility()
 					text-fold = Kephra::App::EditPanel::Margin::switch_fold()
 					line-number = Kephra::App::EditPanel::Margin::switch_line_number()
 					marker = Kephra::App::EditPanel::Margin::switch_marker()
@@ -361,14 +363,18 @@
 				<fold-toggle>
 					all = Kephra::App::EditPanel::Fold::toggle_all()
 					here = Kephra::App::EditPanel::Fold::toggle_here()
+					level = Kephra::App::EditPanel::Fold::toggle_level()
 					recursively = Kephra::App::EditPanel::Fold::toggle_recursively()
-					siblings = Kephra::App::EditPanel::Fold::toggle_siblings()
 				</fold-toggle>
 			</editpanel>
 			<panel>
 				notepad = Kephra::App::Panel::Notepad::switch_visibility()
 				output = Kephra::App::Panel::Output::switch_visibility()
 			</panel>
+			menubar = Kephra::App::MenuBar::switch_visibility()
+			searchbar = Kephra::App::SearchBar::switch_visibility()
+			searchbar-goto = Kephra::App::SearchBar::enter_focus()
+			searchbar-contexmenu = Kephra::App::SearchBar::switch_contextmenu_visibility()
 			statusbar = Kephra::App::StatusBar::switch_visibility()
 			statusbar-contexmenu = Kephra::App::StatusBar::switch_contextmenu_visibility()
 			<statusbar-info>
@@ -378,11 +384,7 @@
 			</statusinfo-info>
 			tabbar = Kephra::App::TabBar::switch_visibility()
 			tabbar-contexmenu = Kephra::App::TabBar::switch_contextmenu_visibility()
-			<toolbar>
-				main = Kephra::App::MainToolBar::switch_visibility()
-				search-goto = Kephra::App::SearchBar::enter_focus()
-				search = Kephra::App::SearchBar::switch_visibility()
-			</toolbar>
+			toolbar = Kephra::App::MainToolBar::switch_visibility()
 			<webpage>
 				forum = Kephra::Help::forum_site()
 				documentation = Kephra::Help::online_documentation()
@@ -659,11 +661,12 @@
 				right-margin = Kephra::App::EditPanel::LLI_visible()
 				whitespace = Kephra::App::EditPanel::whitespace_visible()
 				<contextmenu>
-					custom = Kephra::App::ContextMenu::get_editpanel() eq 'custom'
-					no = Kephra::App::ContextMenu::get_editpanel() eq 'none'
-					default = Kephra::App::ContextMenu::get_editpanel() eq 'default'
+					custom = Kephra::App::EditPanel::get_contextmenu() eq 'custom'
+					no = Kephra::App::EditPanel::get_contextmenu() eq 'none'
+					default = Kephra::App::EditPanel::get_contextmenu() eq 'default'
 				</contextmenu>
 				<margin>
+					contexmenu = Kephra::App::EditPanel::Margin::get_contextmenu_visibility()
 					line-number = Kephra::App::EditPanel::Margin::line_number_visible()
 					marker = Kephra::App::EditPanel::Margin::marker_visible()
 					text-fold = Kephra::App::EditPanel::Margin::fold_visible()
@@ -683,6 +686,9 @@
 				notepad = Kephra::App::Panel::Notepad::get_visibility()
 				output = Kephra::App::Panel::Output::get_visibility()
 			</panel>
+			menubar = Kephra::App::MenuBar::get_visibility()
+			searchbar = Kephra::App::SearchBar::get_visibility()
+			searchbar-contexmenu = Kephra::App::SearchBar::get_contextmenu_visibility()
 			statusbar = Kephra::App::StatusBar::get_visibility()
 			statusbar-contexmenu = Kephra::App::StatusBar::get_contextmenu_visibility()
 			<statusbar-info>
@@ -692,8 +698,7 @@
 			</statusinfo-info>
 			tabbar = Kephra::App::TabBar::get_visibility()
 			tabbar-contexmenu = Kephra::App::TabBar::get_contextmenu_visibility()
-			toolbar-search = Kephra::App::SearchBar::get_visibility()
-			toolbar-main = Kephra::App::MainToolBar::get_visibility()
+			toolbar = Kephra::App::MainToolBar::get_visibility()
 			window-stay-on-top = Kephra::App::Window::get_on_top_mode()
 		</view>
 	</state>
@@ -735,8 +740,9 @@
 			line = goto-line.xpm
 		</goto>
 		<marker>
-			goto-prev-all = find-previous.xpm
-			goto-next-all = find-next.xpm
+			goto-prev-all = marker-previous.xpm
+			goto-next-all = marker-next.xpm
+			toggle-here = marker.xpm
 		</marker>
 		<bookmark>
 			<goto>
@@ -764,6 +770,10 @@
 				0 = bookmark0.xpm
 			</toggle>
 		</bookmark>
+		<tool>
+			interpreter-run-document = run-skript.xpm
+			choose-color = colorpicker.xpm
+		</tool>
 		<view>
 			<dialog>
 				config = config-preferences.xpm
@@ -775,7 +785,7 @@
 			editpanel-line-wrap = line-wrap.xpm
 			panel-notepad = note.xpm
 			panel-output = output-panel.xpm
-			toolbar-search = panel-close.xpm
+			searchbar = panel-close.xpm
 			window-stay-on-top = stay-on-top.xpm
 		</view>
 	</icon>
@@ -938,9 +948,7 @@
 			</move>
 		</document>
 		<view>
-			<toolbar>
-				search-goto = ctrl+f
-			</toolbar>
+			searchbar-goto = ctrl+f
 			<dialog>
 				config = alt+shift+c
 				find = ctrl+shift+f
@@ -951,9 +959,10 @@
 			<editpanel-fold-toggle>
 				all = alt+shift+plus
 				here = alt+minus
+				level = alt+plus
 				recursively = alt+shift+minus
-				siblings = alt+plus
 			</editpanel-fold-toggle>
+			menubar = ctrl+alt+m
 			panel-notepad = ctrl+f4
 			panel-output = ctrl+f5
 			window-stay-on-top = ctrl+t
