--- a/share/config/interface/mainmenu.yml
+++ b/share/config/interface/mainmenu.yml
@@ -137,7 +137,7 @@ full_menubar:
           - item edit-selection-convert-entities2chars
   -
     menu search:
-      - item view-toolbar-search-goto
+      - item view-searchbar-goto
       - item view-dialog-find
       - item view-dialog-replace
       -
@@ -380,20 +380,23 @@ full_menubar:
           - checkitem view-panel-notepad
           - checkitem view-panel-output
       -
+        menu view_bars:
+          - checkitem view-menubar
+          - checkitem view-toolbar
+          - checkitem view-tabbar
+          - checkitem view-searchbar
+          - checkitem view-statusbar
+      -
         menu view_contextmenu:
-          - checkitem view-tabbar-contexmenu
+          - checkitem view-tabbar-contexmenu#
           -
             menu view_editpanel_contexmenu:
               - radioitem view-editpanel-contextmenu-custom
               - radioitem view-editpanel-contextmenu-default
               - radioitem view-editpanel-contextmenu-no
+          - checkitem view-editpanel-margin-contexmenu
+          - checkitem view-searchbar-contexmenu
           - checkitem view-statusbar-contexmenu
-      -
-        menu view_bars:
-          - checkitem view-toolbar-main
-          - checkitem view-tabbar
-          - checkitem view-toolbar-search
-          - checkitem view-statusbar
       -
       - checkitem view-editpanel-margin-marker
       - checkitem view-editpanel-margin-line-number
@@ -402,7 +405,7 @@ full_menubar:
         menu view_text_fold:
           - item view-editpanel-fold-toggle-here
           - item view-editpanel-fold-toggle-recursively
-          - item view-editpanel-fold-toggle-siblings
+          - item view-editpanel-fold-toggle-level
           - item view-editpanel-fold-toggle-all
       -
         menu view_textmargin:
@@ -426,8 +429,8 @@ full_menubar:
       - item view-editpanel-font
   -
     menu config:
-      - item view-dialog-config
-      -
+      - item view-dialog-config#
+      - #
       - menu config_app_lang
       -
       -
