--- a/share/config/localisation/english.conf
+++ b/share/config/localisation/english.conf
@@ -131,6 +131,7 @@
 				export = Export ...
 				backup-open = Restore Backup
 				backup-save = Save Backup
+				history-open-all = Open All
 			</session>
 		</file>
 		<edit>
@@ -301,8 +302,8 @@
 		<tool>
 			note = Note
 			note-selection = Note Selection
-			interpreter-run-document = Run
-			interpreter-stop-document = Stop
+			interpreter-run-document = Run Script
+			interpreter-stop-document = Stop Script
 			<output>
 				inc = @INC
 				env = %ENV
@@ -422,8 +423,8 @@
 				<fold-toggle>
 					all = All
 					here = Here
+					level = Level
 					recursively = Recursively
-					siblings = Siblings
 				</fold-toggle>
 				font = Font
 				indention-guide = Indention Guide
@@ -436,6 +437,7 @@
 					no = No Menu
 				</contextmenu>
 				<margin>
+					contexmenu = Left Margin
 					marker = Marker Margin
 					line-number = Line Number
 					text-fold = Fold Margin
@@ -456,6 +458,10 @@
 				notepad = Notepad
 				output = Output
 			</panel>
+			menubar = Main Menu
+			searchbar = Searchbar
+			searchbar-goto = Searchbar
+			searchbar-contexmenu = Searchbar
 			statusbar = Statusbar
 			statusbar-contexmenu = Statuscontext
 			<statusbar-info>
@@ -465,11 +471,7 @@
 			</statusbar-info>
 			tabbar = Tabbar
 			tabbar-contexmenu = Tabbar
-			<toolbar>
-				main = Main Toolbar
-				search = Searchbar
-				search-goto = Searchbar
-			</toolbar>
+			toolbar = Main Toolbar
 			<webpage>
 				documentation = Online Docs
 				forum = Perl Forum
@@ -581,6 +583,7 @@
 				export = save files session in another editors format
 				backup-open = restore the backup session
 				backup-save = remember current files as the backup session
+				history-open-all = restore all listed closed files from history
 			</session>
 		</file>
 		<edit>
@@ -870,8 +873,8 @@
 				<fold-toggle>
 					all = fold or unfold all visible and not visible nodes
 					here = fold or unfold only the node on selected position
+					level = fold or unfold all nodes with same depth in hierarchy (amount of parents)
 					recursively = fold or unfold this and all nodes below in hierarchy
-					siblings = fold or unfold all nodes with same parent
 				</fold-toggle>
 				font = change font family, size, style etc.
 				indention-guide = vertical dotted lines in intervals of tab width
@@ -884,6 +887,7 @@
 					no = deaktivate all editpanel context menu
 				</contextmenu>
 				<margin>
+					contexmenu = enable or disable the context menu over the margin, left of the edit panel
 					marker = margin for bookmarks, marker, debug steps ...
 					line-number = sets line numbers visible
 					text-fold = switch Margin for the text folding icons
@@ -904,6 +908,10 @@
 				notepad = switch visibility of the Notepad panel
 				output = switch visibility of the Output panel
 			</panel>
+			menubar = turn main menu on (visible) or off
+			searchbar = toolbar with text seach and navigation functions
+			searchbar-goto = goto searchbar and use find function
+			searchbar-contexmenu = enable or disable the context menu over the searchbar
 			statusbar = switch visibility of the statusbar on bottom of the window
 			statusbar-contexmenu = enable or disable context menus on statusbar
 			<statusbar-info>
@@ -913,11 +921,7 @@
 			</statusbar-info>
 			tabbar = switch visibility of the tabbar, toolbar for doc selection
 			tabbar-contexmenu = enable or disable context menus on tabbar
-			<toolbar>
-				main = switch visibility of the main toolbar
-				search = toolbar with text seach and navigation functions
-				search-goto = goto searchbar and use find function
-			</toolbar>
+			toolbar = switch visibility of the main toolbar
 			<webpage>
 				documentation = open online documentation with your default browser
 				forum = go to a perl web forum based on current language setting
