--- a/share/config/localisation/norsk.conf
+++ b/share/config/localisation/norsk.conf
@@ -131,6 +131,7 @@
 				export = Eksporter ...
 				backup-open = Last backup
 				backup-save = Lagre backup
+				history-open-all = Öffne Alle
 			</session>
 		</file>
 		<edit>
@@ -301,8 +302,8 @@
 		<tool>
 			note = Notiere
 			note-selection = Notiere Auswahl
-			interpreter-run-document = Start
-			interpreter-stop-document = Stop
+			interpreter-run-document = Starte Skript
+			interpreter-stop-document = Stop Skript
 			<output>
 				inc = @INC
 				env = %ENV
@@ -422,8 +423,8 @@
 				<fold-toggle>
 					all = Alle
 					here = Hier
+					level = Level
 					recursively = Rekursiv
-					siblings = Geschwister
 				</fold-toggle>
 				font = Schriftart
 				indention-guide = Einrückmarkierung
@@ -436,6 +437,7 @@
 					no = Kein Menü
 				</contextmenu>
 				<margin>
+					contexmenu = Linke Randleiste
 					marker = Markerrand
 					line-number = Zeilennummern
 					text-fold = Faltrand
@@ -456,6 +458,10 @@
 				notepad = Notizablage
 				output = Ausgabe
 			</panel>
+			menubar = Hauptmenü
+			searchbar = Suchzeile
+			searchbar-goto = Suchzeile
+			searchbar-contexmenu = Suchzeile
 			statusbar = Statuszeile
 			statusbar-contexmenu = Statuszeile
 			<statusbar-info>
@@ -465,11 +471,7 @@
 			</statusbar-info>
 			tabbar = Reiterleiste
 			tabbar-contexmenu = Reiterleiste
-			<toolbar>
-				main = Werkzeugleiste
-				search = Suchzeile
-				search-goto = Suchzeile
-			</toolbar>
+			toolbar = Werkzeugleiste
 			<webpage>
 				documentation = Netz Doku
 				forum = Perlforum
@@ -581,6 +583,7 @@
 				export = Dateigruppe im Format anderer Editoren schreiben
 				backup-open = stellt die Backupgruppe wieder her
 				backup-save = merkt sich offenen Dateien als Backupgruppe
+				history-open-all = stelle alle gelisteten Dateien wieder her
 			</session>
 		</file>
 		<edit>
@@ -870,8 +873,8 @@
 				<fold-toggle>
 					all = falte alle sichtbaren und unsichtbaren Knoten
 					here = nur angewählten Knoten ein oder ausklappen
+					level = falte alle Knoten dieser Ebene (gleiche Tiefe in Knotenhierarchie)
 					recursively = falten des angewählten Knotens und all seine Kinder
-					siblings = alle Knoten mit dem selben übergeordneten Knoten falten
 				</fold-toggle>
 				font = Dialog für Schrift Einstellungen
 				indention-guide = gepunktete Linien im Abstand der Tab - Breite
@@ -884,6 +887,7 @@
 					no = deaktiviere alle Editor-Kontextmenüs
 				</contextmenu>
 				<margin>
+					contexmenu = schalte Kontextmenü über dem linken Editorrand an oder aus
 					marker = Rand für Lesezeichen, Marker, Debug-Stops ...
 					line-number = Zeilennummern an und abschalten
 					text-fold = Rand für Textfaltsymbole an oder abschalten
@@ -904,6 +908,10 @@
 				notepad = schalte Notepadpanel ein oder aus
 				output = schalte Ausgabepanel ein oder aus
 			</panel>
+			menubar = Hauptmenü ein oder ausschalten
+			searchbar = Werkzeugleiste mit Such- und Navigationsfunktionen
+			searchbar-goto = benutze Suchfunktion in Suchzeile
+			searchbar-contexmenu = schalte Kontextmenü der Suchzeile an oder aus
 			statusbar = Statuszeile am Boden des Programmfensters
 			statusbar-contexmenu = schalte Kontextmenüs der Statuszeile an oder aus
 			<statusbar-info>
@@ -913,11 +921,7 @@
 			</statusbar-info>
 			tabbar = die Reiterleiste ermöglicht Auswahl des Dokuments durch (Tabs)
 			tabbar-contexmenu = schalte Kontextmenü der Reiterleiste an oder aus
-			<toolbar>
-				main = Haupt-Werkzeugleiste zum Bearbeiten der Dokumente
-				search = Werkzeugleiste mit Such- und Navigationsfunktionen
-				search-goto = benutze Suchfunktion in Suchzeile
-			</toolbar>
+			toolbar = Haupt-Werkzeugleiste zum Bearbeiten der Dokumente
 			<webpage>
 				documentation = öffne Dokumentation auf der Heimseite, mit deinem Standardbrowser
 				forum = öffne Seite eines Perlforums, passend zur eingestellten Sprache
