Import of LICHTKIND/Kephra-0.4.2_24 from CPAN.
gitpan-cpan-distribution: Kephra
gitpan-cpan-version:      0.4.2_24
gitpan-cpan-path:         LICHTKIND/Kephra-0.4.2_24.tar.gz
gitpan-cpan-author:       LICHTKIND
gitpan-cpan-maturity:     developer

--- a/share/config/interface/mainmenu.yml
+++ b/share/config/interface/mainmenu.yml
@@ -347,7 +347,8 @@ full_menubar:
               - checkitem document-syntaxmode-matlab
       -
         menu document_encoding:
-          - radioitem document-encoding-8bit
+          - radioitem document-encoding-ascii
+          - radioitem document-encoding-latin1
           - radioitem document-encoding-utf8
       - checkitem document-brace-indention
       - checkitem document-auto-indention
