--- a/share/config/localisation/cesky.conf
+++ b/share/config/localisation/cesky.conf
@@ -327,7 +327,8 @@
 				next = Next Tab
 			</change>
 			<encoding>
-				8bit = 8 Bit
+				ascii = ASCII
+				latin1 = Latin 1
 				utf8 = UTF-8
 			</encoding>
 			<move>
@@ -777,7 +778,8 @@
 				next = changes the current document one tab to the right
 			</change>
 			<encoding>
-				8bit = converts document encoding into 8 Bit
+				ascii = converts document encoding into 8 Bit ASCII
+				latin1 = converts document encoding into iso-8859-1
 				utf8 = converts document encoding into UTF-8
 			</encoding>
 			<move>
