--- a/share/config/interface/commands.conf
+++ b/share/config/interface/commands.conf
@@ -240,7 +240,8 @@
 				lf = Kephra::Document::Property::convert_EOL('lf')
 			</EOL>
 			<encoding>
-				8bit = Kephra::Document::Property::set_codepage('8bit')
+				ascii = Kephra::Document::Property::set_codepage('ascii')
+				latin1 = Kephra::Document::Property::set_codepage('latin1')
 				utf8 = Kephra::Document::Property::set_codepage('utf8')
 			</encoding>
 			<move>
