--- a/share/config/localisation/norsk.conf
+++ b/share/config/localisation/norsk.conf
@@ -327,7 +327,8 @@
 				next = Nächtes
 			</change>
 			<encoding>
-				8bit = 8 Bit
+				ascii = ASCII
+				latin1 = Latin 1
 				utf8 = UTF-8
 			</encoding>
 			<move>
@@ -777,8 +778,9 @@
 				next = wechsle zum Dokument mit der nächsthöheren Nummer
 			</change>
 			<encoding>
-				8bit = converts document encoding into 8 Bit
-				utf8 = converts document encoding into UTF-8
+				ascii = konvertiert Zeichensatz des Dokuments zu 8 Bit (ASCII)
+				latin1 = konvertiert Zeichensatz des Dokuments zu iso-8859-1
+				utf8 = konvertiert Zeichensatz des Dokuments zu UTF-8 (Unicode)
 			</encoding>
 			<move>
 				left = verschiebe aktuelles Dokument in der Reiterleiste eins nach links
