Import of LICHTKIND/Kephra-0.4.2_25 from CPAN.
gitpan-cpan-distribution: Kephra
gitpan-cpan-version:      0.4.2_25
gitpan-cpan-path:         LICHTKIND/Kephra-0.4.2_25.tar.gz
gitpan-cpan-author:       LICHTKIND
gitpan-cpan-maturity:     developer

--- a/share/config/interface/mainmenu.yml
+++ b/share/config/interface/mainmenu.yml
@@ -348,7 +348,7 @@ full_menubar:
       -
         menu document_encoding:
           - radioitem document-encoding-ascii
-          - radioitem document-encoding-latin1
+          - radioitem document-encoding-latin1#
           - radioitem document-encoding-utf8
       - checkitem document-brace-indention
       - checkitem document-auto-indention
