Import of LICHTKIND/Kephra-0.4.2_29 from CPAN.
gitpan-cpan-distribution: Kephra
gitpan-cpan-version:      0.4.2_29
gitpan-cpan-path:         LICHTKIND/Kephra-0.4.2_29.tar.gz
gitpan-cpan-author:       LICHTKIND
gitpan-cpan-maturity:     developer

--- a/share/config/interface/commands.conf
+++ b/share/config/interface/commands.conf
@@ -367,6 +367,7 @@
 					level = Kephra::App::EditPanel::Fold::toggle_level()
 					recursively = Kephra::App::EditPanel::Fold::toggle_recursively()
 				</fold-toggle>
+				maximize = Kephra::App::Window::switch_max_editpanel_mode()
 			</editpanel>
 			<panel>
 				notepad = Kephra::App::Panel::Notepad::switch_visibility()
@@ -390,7 +391,13 @@
 				forum = Kephra::Help::forum_site()
 				documentation = Kephra::Help::online_documentation()
 			</webpage>
-			window-stay-on-top = Kephra::App::Window::switch_on_top_mode()
+			<window>
+				fullscreen = Kephra::App::Window::switch_fullscreen_mode()
+				restore = Kephra::App::Window::restore_normal_mode()
+				stay-on-top = Kephra::App::Window::switch_on_top_mode()
+				top-transparent = Kephra::App::Window::switch_top_and_transparency_mode()
+				transparent = Kephra::App::Window::switch_transparency_mode()
+			</window>
 		</view>
 		<config>
 			<file>
@@ -682,6 +689,7 @@
 						12 = Kephra::App::EditPanel::Margin::get_text_width() == 12
 					</text>
 				</margin>
+				maximize = Kephra::App::Window::get_max_editpanel_mode()
 			</editpanel>
 			<panel>
 				notepad = Kephra::App::Panel::Notepad::get_visibility()
@@ -700,7 +708,11 @@
 			tabbar = Kephra::App::TabBar::get_visibility()
 			tabbar-contexmenu = Kephra::App::TabBar::get_contextmenu_visibility()
 			toolbar = Kephra::App::MainToolBar::get_visibility()
-			window-stay-on-top = Kephra::App::Window::get_on_top_mode()
+			<window>
+				fullscreen = Kephra::App::Window::get_fullscreen_mode()
+				stay-on-top = Kephra::App::Window::get_on_top_mode()
+				transparent = Kephra::App::Window::get_transparency_mode()
+			</window>
 		</view>
 	</state>
 	<state_event>
@@ -957,16 +969,26 @@
 				info = alt+shift+i
 				keymap = alt+shift+k
 			</dialog>
-			<editpanel-fold-toggle>
-				all = alt+shift+plus
-				here = alt+minus
-				level = alt+plus
-				recursively = alt+shift+minus
-			</editpanel-fold-toggle>
+			<editpanel>
+				<fold-toggle>
+					all = alt+shift+plus
+					here = alt+minus
+					level = alt+plus
+					recursively = alt+shift+minus
+				</fold-toggle>
+				maximize = shift+f11
+			</editpanel>
 			menubar = ctrl+alt+m
 			panel-notepad = ctrl+f4
 			panel-output = ctrl+f5
-			window-stay-on-top = ctrl+t
+			tabbar = ctrl+alt+t
+			<window>
+				fullscreen = f11
+				restore = esc
+				stay-on-top = ctrl+f11
+				top-transparent = ctrl+alt+f11 
+				transparent = alt+f11 
+			</window>
 		</view>
 	</key>
 </commandlist>
