--- a/share/config/interface/mainmenu.yml
+++ b/share/config/interface/mainmenu.yml
@@ -374,8 +374,12 @@ full_menubar:
           - radioitem document-readonly-off
   -
     menu view:
-      - checkitem view-window-stay-on-top
       -
+        menu view_window:
+          - checkitem view-window-fullscreen
+          - checkitem view-editpanel-maximize
+          - checkitem view-window-stay-on-top
+          - checkitem view-window-transparent
       -
         menu view_panel:
           - checkitem view-panel-notepad
