--- a/share/config/localisation/deutsch.conf
+++ b/share/config/localisation/deutsch.conf
@@ -3,7 +3,7 @@
 	iso_code = de
 	coding = UTF-8
 	purpose = global localisation
-	version = 0.05
+	version = 0.06
 </about>
 <app>
 	<general>
@@ -51,6 +51,7 @@
 			document_lineendchar = Zeilenendzeichen
 			document_readonly = Schreibschutz
 			view = Ansicht
+			view_window = Hauptfenster
 			view_panel = Panel
 			view_bars = Leisten
 			view_contextmenu = Kontextmenüs
@@ -454,6 +455,7 @@
 						12 = 12
 					</text>
 				</margin>
+				maximize = Max Editfläche
 			</editpanel>
 			<panel>
 				notepad = Notizablage
@@ -477,7 +479,11 @@
 				documentation = Netz Doku
 				forum = Perlforum
 			</webpage>
-			window-stay-on-top = Im Vordergrund
+			<window>
+				fullscreen = Vollbild
+				stay-on-top = Im Vordergrund
+				transparent = Durchsichtig
+			</window>
 		</view>
 		<config>
 			<file>
@@ -905,6 +911,7 @@
 						12 = stelle Extrarand an beiden Seiten des Textfelds auf 12 pixel
 					</text>
 				</margin>
+				maximize = schließe alle Panel und Leisten um mehr Editierfläche zu erhalten
 			</editpanel>
 			<panel>
 				notepad = schalte Notepadpanel ein oder aus
@@ -928,7 +935,11 @@
 				documentation = öffne Dokumentation auf der Heimseite, mit deinem Standardbrowser
 				forum = öffne Seite eines Perlforums, passend zur eingestellten Sprache
 			</webpage>
-			window-stay-on-top = Programmfenster bleibt immer im Vordergrund
+			<window>
+				fullscreen = vergrößere das Hauptfenster auf maximimum
+				stay-on-top = andere Programme können das Hauptfenster nicht mehr verdecken
+				transparent = mach Hauptfenster durchsichtig
+			</window>
 		</view>
 		<config>
 			app-lang = wechlse Spracheinstellung des Programms auf
