--- a/share/config/localisation/english.conf
+++ b/share/config/localisation/english.conf
@@ -51,6 +51,7 @@
 			document_lineendchar = Lineendchars
 			document_readonly = Write Protection
 			view = View
+			view_window = Main Window
 			view_panel = Panel
 			view_bars = App Bars
 			view_contextmenu = Context Menus
@@ -454,6 +455,7 @@
 						12 = 12
 					</text>
 				</margin>
+				maximize = Maximize Editpanel
 			</editpanel>
 			<panel>
 				notepad = Notepad
@@ -477,7 +479,11 @@
 				documentation = Online Docs
 				forum = Perl Forum
 			</webpage>
-			window-stay-on-top = Stay On Top
+			<window>
+				fullscreen = Fullscreen
+				stay-on-top = Stay On Top
+				transparent = Transparent
+			</window>
 		</view>
 		<config>
 			<file>
@@ -905,6 +911,7 @@
 						12 = set extra margin on both sides of textfield to 12 pixel
 					</text>
 				</margin>
+				maximize = toggle all panels and bars to enlarge the edit area
 			</editpanel>
 			<panel>
 				notepad = switch visibility of the Notepad panel
@@ -928,7 +935,11 @@
 				documentation = open online documentation with your default browser
 				forum = go to a perl web forum based on current language setting
 			</webpage>
-			window-stay-on-top = application window remains always visible
+			<window>
+				fullscreen = use maximum screen space
+				stay-on-top = application window cant be overlapped by other windows
+				transparent = make main window translucent
+			</window>
 		</view>
 		<config>
 			app-lang = change user interface language to
