Import of LICHTKIND/Kephra-0.4.2_39 from CPAN.
gitpan-cpan-distribution: Kephra
gitpan-cpan-version:      0.4.2_39
gitpan-cpan-path:         LICHTKIND/Kephra-0.4.2_39.tar.gz
gitpan-cpan-author:       LICHTKIND
gitpan-cpan-maturity:     developer

--- a/share/config/interface/commands.conf
+++ b/share/config/interface/commands.conf
@@ -69,6 +69,7 @@
 					page-down = Kephra::Edit::selection_move_page_down()
 				</move>
 			</line>
+			string-copy = Kephra::Edit::string_copy()
 			<selection>
 				<convert>
 					uppercase = Kephra::Edit::Convert::upper_case()
@@ -834,6 +835,7 @@
 			replace = ctrl+w
 			delete = del
 			delete-tab = shift+back
+			string-copy = ctrl+alt+c
 			<line>
 				cut = ctrl+shift+x
 				copy = ctrl+shift+c
