--- a/share/config/localisation/cesky.conf
+++ b/share/config/localisation/cesky.conf
@@ -17,7 +17,6 @@
 			file_close = Close
 			file_history = Historie
 			file_session = Skupina
-			file_insert_templates = Pr(edloha
 			edit = Upravit
 			edit_changes = Historie
 			current_line = R(ada
@@ -34,6 +33,7 @@
 			bookmark_toggle = Toggle Bookmark
 			tools = Tools
 			tool_output = Output
+			insert_templates = Pr(edloha
 			document = Document
 			document_change = Change
 			document_convert = Convert
