--- a/share/config/localisation/deutsch.conf
+++ b/share/config/localisation/deutsch.conf
@@ -17,7 +17,6 @@
 			file_close = Schließen
 			file_history = &Zuletzt Verwendete
 			file_session = &Gruppe
-			file_insert_templates = &Templates
 			edit = Bearbeiten
 			edit_changes = Änderungen
 			current_line = &Zeile
@@ -34,6 +33,7 @@
 			bookmark_toggle = Lesezeichen Umschalten
 			tools = Werkzeuge
 			tool_output = Ausgabe
+			insert_templates = &Templates
 			document = Do&kument
 			document_change = Wähle
 			document_convert = Konvertieren
