--- a/share/config/localisation/english.conf
+++ b/share/config/localisation/english.conf
@@ -17,7 +17,6 @@
 			file_close = Close
 			file_history = Recently Closed
 			file_session = Session
-			file_insert_templates = Templates
 			edit = Edit
 			edit_changes = History
 			current_line = Line
@@ -34,6 +33,7 @@
 			bookmark_toggle = Toggle Bookmark
 			tools = Tools
 			tool_output = Output
+			insert_templates = Templates
 			document = Document
 			document_change = Change
 			document_convert = Convert
