--- a/share/config/localisation/norsk.conf
+++ b/share/config/localisation/norsk.conf
@@ -17,7 +17,6 @@
 			file_close = Lukk
 			file_history = &Nylig brykt
 			file_session = &Gruppe
-			file_insert_templates = &Maler
 			edit = Rediger
 			edit_changes = Endringer
 			current_line = &Linje
@@ -34,6 +33,7 @@
 			bookmark_toggle = bytt bokmerker
 			tools = Verktøy
 			tool_output = Ausgabe
+			insert_templates = &Maler
 			document = Do&kument
 			document_change = Velg
 			document_convert = Konvertieren
