--- a/share/config/localisation/romanian.conf
+++ b/share/config/localisation/romanian.conf
@@ -17,7 +17,6 @@
 			file_close = Închide
 			file_history = Închise recent
 			file_session = Sesiune
-			file_insert_templates = Modele
 			edit = Editare
 			edit_changes = Istoric modificări
 			current_line = Linie
@@ -34,6 +33,7 @@
 			bookmark_toggle = Comută semne de carte
 			tools = Unelte
 			tool_output = Rezultat
+			insert_templates = Modele
 			document = Document
 			document_change = Modifică
 			document_convert = Convertește
