--- a/share/config/interface/commands.conf
+++ b/share/config/interface/commands.conf
@@ -950,6 +950,7 @@
 			interpreter-run-document = f5
 			interpreter-stop-document = shift+f5
 			output-selection-dec = ctrl+shift+f5
+			output-selection-hex = alt+shift+f5
 		</tool>
 		<document>
 			<change>
