Import of LICHTKIND/Kephra-0.4.3_3 from CPAN.
gitpan-cpan-distribution: Kephra
gitpan-cpan-version:      0.4.3_3
gitpan-cpan-path:         LICHTKIND/Kephra-0.4.3_3.tar.gz
gitpan-cpan-author:       LICHTKIND
gitpan-cpan-maturity:     developer

--- a/share/config/interface/commands.conf
+++ b/share/config/interface/commands.conf
@@ -69,7 +69,6 @@
 					page-down = Kephra::Edit::selection_move_page_down()
 				</move>
 			</line>
-			string-copy = Kephra::Edit::string_copy()
 			<selection>
 				<convert>
 					uppercase = Kephra::Edit::Convert::upper_case()
@@ -225,6 +224,10 @@
 				selection-hex = Kephra::App::Panel::Output::display_selection_hex()
 			</output>
 			choose-color = Kephra::Dialog::choose_color()
+			<perl>
+				insert-last-var = Kephra::Edit::insert_last_perl_var()
+				copy-string = Kephra::Edit::copy_surrounding_string()
+			</perl>
 		</tool>
 		<document>
 			auto-indention = Kephra::Document::Property::switch_autoindention()
@@ -835,7 +838,8 @@
 			replace = ctrl+w
 			delete = del
 			delete-tab = shift+back
-			string-copy = ctrl+alt+c
+			copy-string = ctrl+alt+c
+			insert-last-perl-var = ctrl+shift+v
 			<line>
 				cut = ctrl+shift+x
 				copy = ctrl+shift+c
@@ -951,6 +955,8 @@
 			interpreter-stop-document = shift+f5
 			output-selection-dec = ctrl+shift+f5
 			output-selection-hex = alt+shift+f5
+			perl-insert-last-var = ctrl+shift+v
+			perl-copy-string = alt+shift+c
 		</tool>
 		<document>
 			<change>
