--- a/share/config/localisation/english.conf
+++ b/share/config/localisation/english.conf
@@ -1,9 +1,10 @@
 <about>
+	author = Herbert Breunung
 	language = english
 	iso_code = en
 	coding = ASCII
 	purpose = global localisation
-	version = 0.06
+	version = 0.4.3.3
 </about>
 <app>
 	<general>
@@ -312,6 +313,10 @@
 				selection-hex = Selection in Hex
 			</output>
 			choose-color = Color Picker
+			<perl>
+				insert-last-var = Insert Var
+				copy-string = Copy String
+			</perl>
 		</tool>
 		<document>
 			auto-indention = Autoindention
@@ -768,6 +773,10 @@
 				selection-hex = display selected text in hexadecimal coding in the ouput panel
 			</output>
 			choose-color = display text selection as color and choose a new from a rainbow
+			<perl>
+				insert-last-var = insert last Perl variable that began a line
+				copy-string = copy surrounding single or double quoted string
+			</perl>
 		</tool>
 		<document>
 			auto-indention = indents new line like previous when Enter pressed 
