--- a/share/config/localisation/romanian.conf
+++ b/share/config/localisation/romanian.conf
@@ -1,9 +1,10 @@
 <about>
+	author = Stefan Suicu
 	language = romanian
 	iso_code = ro
 	coding = UTF-8
 	purpose = global localisation
-	version = 0.061
+	version = 0.4.3.3
 </about>
 <app>
 	<general>
