Import of LICHTKIND/Kephra-0.4.3_6 from CPAN.
gitpan-cpan-distribution: Kephra
gitpan-cpan-version:      0.4.3_6
gitpan-cpan-path:         LICHTKIND/Kephra-0.4.3_6.tar.gz
gitpan-cpan-author:       LICHTKIND
gitpan-cpan-maturity:     developer

--- a/share/config/interface/commands.conf
+++ b/share/config/interface/commands.conf
@@ -392,8 +392,10 @@
 			tabbar-contexmenu = Kephra::App::TabBar::switch_contextmenu_visibility()
 			toolbar = Kephra::App::MainToolBar::switch_visibility()
 			<webpage>
-				forum = Kephra::Help::forum_site()
+				bug-tracker = Kephra::Help::bug_tracker()
 				documentation = Kephra::Help::online_documentation()
+				feature-wish = Kephra::Help::feature_wish()
+				forum = Kephra::Help::forum_site()
 			</webpage>
 			<window>
 				fullscreen = Kephra::App::Window::switch_fullscreen_mode()
