--- a/share/config/interface/mainmenu.yml
+++ b/share/config/interface/mainmenu.yml
@@ -223,9 +223,10 @@ full_menubar:
       -
       - menu insert_templates
       - item tool-choose-color
+      - item tool-insert-time-date
       -
-      - item tool-perl-copy-string
       - item tool-perl-insert-last-var
+      - item tool-perl-copy-string
   -
     menu document:
       -
@@ -521,6 +522,8 @@ full_menubar:
       -
       - item view-webpage-documentation
       - item view-webpage-forum
+      - item view-webpage-bug-tracker
+      - item view-webpage-feature-wish
       -
       - item view-dialog-keymap
       - item view-dialog-info
