--- a/share/config/localisation/english.conf
+++ b/share/config/localisation/english.conf
@@ -4,7 +4,7 @@
 	iso_code = en
 	coding = ASCII
 	purpose = global localisation
-	version = 0.4.3.3
+	version = 0.4.3.4
 </about>
 <app>
 	<general>
@@ -481,7 +481,9 @@
 			tabbar-contexmenu = Tabbar
 			toolbar = Main Toolbar
 			<webpage>
+				bug-tracker = Bug Tracker
 				documentation = Online Docs
+				feature-wish = Feature Wish
 				forum = Perl Forum
 			</webpage>
 			<window>
@@ -772,11 +774,11 @@
 				selection-dec = display selected text in decimal coding in the ouput panel
 				selection-hex = display selected text in hexadecimal coding in the ouput panel
 			</output>
-			choose-color = display text selection as color and choose a new from a rainbow
 			<perl>
 				insert-last-var = insert last Perl variable that began a line
 				copy-string = copy surrounding single or double quoted string
 			</perl>
+			choose-color = display text selection as color and choose a new from a rainbow
 		</tool>
 		<document>
 			auto-indention = indents new line like previous when Enter pressed 
@@ -941,7 +943,9 @@
 			tabbar-contexmenu = enable or disable context menus on tabbar
 			toolbar = switch visibility of the main toolbar
 			<webpage>
+				bug-tracker = please report any problem with the programm
 				documentation = open online documentation with your default browser
+				feature-wish = report a feature or design change wish
 				forum = go to a perl web forum based on current language setting
 			</webpage>
 			<window>
