--- a/share/config/localisation/romana.conf
+++ b/share/config/localisation/romana.conf
@@ -1,10 +1,10 @@
 <about>
-	author = Stefan Suicu
-	language = romanian
+	author = Stefan Suciu
+	language = romana
 	iso_code = ro
 	coding = UTF-8
 	purpose = global localisation
-	version = 0.4.3.3
+	version = 0.4.3.4
 </about>
 <app>
 	<general>
@@ -18,6 +18,7 @@
 			file_close = Închide
 			file_history = Închise recent
 			file_session = Sesiune
+			file_insert_templates = Modele
 			edit = Editare
 			edit_changes = Istoric modificări
 			current_line = Linie
@@ -34,7 +35,6 @@
 			bookmark_toggle = Comută semne de carte
 			tools = Unelte
 			tool_output = Rezultat
-			insert_templates = Modele
 			document = Document
 			document_change = Modifică
 			document_convert = Convertește
@@ -313,6 +313,10 @@
 				selection-hex = Selecția în Hex
 			</output>
 			choose-color = Selectare culori
+			<perl>
+				insert-last-var = Inserează variabilă
+				copy-string = Copiază șir
+			</perl>
 		</tool>
 		<document>
 			auto-indention = Auto indentare
@@ -477,7 +481,9 @@
 			tabbar-contexmenu = Bara de pagini
 			toolbar = Bara de unelte
 			<webpage>
+				bug-tracker = Monitorizare defecte
 				documentation = Documentație online
+				feature-wish = Propune noi funcțiuni
 				forum = Forum Perl
 			</webpage>
 			<window>
@@ -768,6 +774,10 @@
 				selection-dec = afișează textul selectat în zecimal în panoul de rezultate
 				selection-hex = afișează textul selectat în hexazecimal în panoul de rezultate
 			</output>
+			<perl>
+				insert-last-var = inserează ultima variabilă Perl declarată
+				copy-string = copiază șirul dintre ghilimele duble sau simple
+			</perl>
 			choose-color = dialog pentru seletarea culorii
 		</tool>
 		<document>
@@ -933,7 +943,9 @@
 			tabbar-contexmenu = activează sau dezactivează meniul context pe bara paginilor
 			toolbar = comută vizibilitatea barei de unelte principale
 			<webpage>
+				bug-tracker = rog, raportați orice problemă din program
 				documentation = deschide documentația online cu navigatorul implicit
+				feature-wish = propuneri pentru noi funcțiuni sau modificări dorite
 				forum = go to a perl web forum based on current language setting
 			</webpage>
    			<window>
